--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -42,7 +42,7 @@
   "resources": "",
   "runCode": "",
   "logIn": "",
-  "signIn": "",
+  "signUp": "",
   "sponsorsPartnersText": "",
   "sponsorsPartnersTitle": "",
   "start": "",
