--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -43,7 +43,7 @@
   "resources": "Ресурсы",
   "runCode": "Запустить код",
   "logIn": "Вход",
-  "signIn": "Зарегистрироваться",
+  "signUp": "Зарегистрироваться",
   "sponsorsPartnersText": "Этот информационный бюллетень был подготовлен частично при финансовой поддержке Программы малых грантов для выпускников правительства США. Программа малых грантов финансируется посольством США в Кыргызской Республике и реализуется через Американский совет по международному образованию (ACCELS). Рекомендации, выводы и мнения, представленные здесь, представляют собой только мнение авторов и могут не отражать точку зрения Посольства США в Кыргызской Республике или Американских советов по международному образованию.",
   "sponsorsPartnersTitle": "Спонсоры и партнеры",
   "start": "Стартуем!",
