--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -46,7 +46,7 @@
   "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
   "runCode": "Код жүргүзүү",
   "logIn": "Кирүү",
-  "signIn": "Аккаунт түзүү",
+  "signUp": "Аккаунт түзүү",
   "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
   "sponsorsPartnersTitle": "Демөөрчүлөр жана өнөктөштөр",
   "start": "Баштадык!",
