--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -54,5 +54,7 @@
   "whatCodeText": "Kodjaz бул дүйнө жүзүндө популярдуу болгон тилдерди жана технологияларда браузерден чыкпастан үйрөнүү мүмкүнчүлүгүн тартуулаган билим берүү платформасы.",
   "whatCodeTitle": "<kodjaz>Kodjaz</kodjaz> деген эмне?",
   "withSocialMedias": "Соцтармактар аркулуу киирүү:",
-  "whySimple": "Эмне үчүн ыңгайлуу?"
+  "whySimple": "Эмне үчүн ыңгайлуу?",
+  "confirmEmail": "Почтаңызды ырастаңыз",
+  "confirmEmailPopupText": "{{email}} почтаңызды текшериңиз. Сизге эмейл менен ырастоо шилтемеси келет. Почта сиздики экенин билдириш үчүн ошол шилтеме аркылуу өтүңүз."
 }
