--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -56,5 +56,9 @@
   "withSocialMedias": "Соцтармактар аркулуу киирүү:",
   "whySimple": "Эмне үчүн ыңгайлуу?",
   "confirmEmail": "Почтаңызды ырастаңыз",
-  "confirmEmailPopupText": "{{email}} почтаңызды текшериңиз. Сизге эмейл менен ырастоо шилтемеси келет. Почта сиздики экенин билдириш үчүн ошол шилтеме аркылуу өтүңүз."
+  "confirmEmailPopupText": "{{email}} почтаңызды текшериңиз. Сизге эмейл менен ырастоо шилтемеси келет. Почта сиздики экенин билдириш үчүн ошол шилтеме аркылуу өтүңүз.",
+  "just a second": "бир мүнөт...",
+  "Not found.": "табылган жок.",
+  "ok": "Эмейлиңиз текшерилди. Эми кирсеңиз болот :)",
+  "emailConfirmationText": "Эмейл ырастоо: {{status}}"
 }
