--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -52,5 +52,9 @@
   "withSocialMedias": "Войти через социальные сети:",
   "whySimple": "Почему с нами удобно?",
   "confirmEmail": "Подтвердите почту",
-  "confirmEmailPopupText": "Проверьте почтовый ваш ящик {{email}}. Вам придет ссылка для верификации. Чтобы мы поняли что почта принадлежит вам, перейдите по той ссылке."
+  "confirmEmailPopupText": "Проверьте почтовый ваш ящик {{email}}. Вам придет ссылка для верификации. Чтобы мы поняли что почта принадлежит вам, перейдите по той ссылке.",
+  "just a second": "минуточку...",
+  "Not found.": "не найдено.",
+  "ok": "Ваш email верифицирован. Теперь вы можете залогиниться :)",
+  "emailConfirmationText": "Верификация email: {{status}}"
 }
