Email verification handling (#41)
* Show email confirmation popup

* Add popup text

* Show email on popup

* Add spinner component

* Show loading spinner

* Fix type

* Show email confirmation popup after registration

* Add translations

* Turn off localeDetection

* Create NonSSRWrapper

* Create email verification page

* Format

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -50,5 +50,11 @@
   "whatCodeText": "Kodjaz — это образовательная платформа, которая предлагает возможность изучать самые популярные в мире языки и технологии, не выходя из браузера.",
   "whatCodeTitle": "Что такое <kodjaz>Kodjaz</kodjaz>?",
   "withSocialMedias": "Войти через социальные сети:",
-  "whySimple": "Почему с нами удобно?"
+  "whySimple": "Почему с нами удобно?",
+  "confirmEmail": "Подтвердите почту",
+  "confirmEmailPopupText": "Проверьте почтовый ваш ящик {{email}}. Вам придет ссылка для верификации. Чтобы мы поняли что почта принадлежит вам, перейдите по той ссылке.",
+  "just a second": "минуточку...",
+  "Not found.": "не найдено.",
+  "ok": "Ваш email верифицирован. Теперь вы можете залогиниться :)",
+  "emailConfirmationText": "Верификация email: {{status}}"
 }
