--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "aboutCommand": "",
   "aboutUs": "",
+  "aboutCourse": "",
   "aboutPromoText": "Our mission",
   "aboutPromoTitle": "",
   "aboutPlatformText1": "",
