--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -1,6 +1,7 @@
 {
   "aboutCommand": "Тайпа тууралуу",
   "aboutUs": "Биз тууралуу",
+  "aboutCourse": "Курс тууралуу",
   "aboutPromoText": "Миссиябыз",
   "aboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
   "aboutPlatformText1": "<text1>Өзүм айти багытына кызыгып жүрүп, жогорку билимим англис тил мугалими болгонуна карабастан, 29 жашымда codecademy.com сайтынан Python тилин үйрөндүм. Окуганыма 2 жыл болгондо, 2014-жылы айлык маянасы жакшы болгон MegaCom компаниясындагы жумушуман кетип, программист кесибиндеги алгачкы кадамдарымды шилтедим.</text1><text2>Ал ортодо codecademy.com сайтындагы курстарды кыргызчалатуу долбоорун Чоробек Сааданбеков мырза менен 2013–2014 жж. ишке ашырдык. Бирок codecademy.com өзү стартап болгондуктан, өнүгүү багытын өзү чечкенге укуктуу да. Кыргызстандан колдонуучулар өтө аз деген шылтоо менен кыргыз тилин, кийин башка тилдерди дагы алып салып, бир гана англис тилинде окута башташкан.</text2>",
