--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,6 +1,7 @@
 {
   "aboutCommand": "Команда",
   "aboutUs": "О нас",
+  "aboutCourse": "О курсе",
   "aboutPromoText": "Наша миссия",
   "aboutPromoTitle": "Кыргызскоязычные программисты готовы внести вклад в развитие знаний, увеличив количество и качество учебных материалов",
   "aboutPlatformText1": "<text1>Я сам интересовался IТ и, несмотря на свое высшее образование преподавателя английского языка, в 29 лет выучил Python на codecademy.com. Когда я проучился 2 года, в 2014 году я уволился с высокооплачиваемой работы в MegaCom и сделал первые шаги программиста.</text1><text2>Параллельно работал над проектом кыргызизации курсов на сайте codecademy.com, который мы реализовали с г-ном Чоробеком Сааданбековым в 2013-2014 гг. Однако, поскольку codecademy.com — стартап, он вправе сам определять направление развития. Под предлогом того, что пользователей из Кыргызстана на кыргызском языке слишком мало они убрали его, а потом и другие языки убрали и начали преподавать только на английском языке.</text2>",
