27 implement course selection page (#48)
* added my courses page

* Added CourseDetail page

* Fixed imports

* Added getSubscriptions

* Use params instead of query

* Adapt api functions

* Get rid of warnings (use new way of adding redux)

* Pass down subscribed tracks

* Render courses and placeholders

* Implement subscribe

* Fix type error

Co-authored-by: Elza Mambetakunova <elza@mancho.dev>

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "aboutCommand": "",
   "aboutUs": "",
+  "aboutCourse": "",
   "aboutPromoText": "Our mission",
   "aboutPromoTitle": "",
   "aboutPlatformText1": "",
@@ -11,6 +12,7 @@
   "commandCareerMurat": "",
   "cookiePolicy": "Cookie policy",
   "courses": "",
+  "continueCourse": "",
   "enter": "",
   "feedbacksAuthor1": "",
   "feedbacksRegion1": "",
@@ -35,17 +37,21 @@
   "mainPromoTitle": "",
   "menu": "",
   "next": "",
+  "myCourses": "",
   "noAccountSignUp": "",
   "onlyKyrgyzLanguage": "",
   "password": "",
   "privacyPolicy": "Privacy policy",
   "resources": "",
   "runCode": "",
+  "recommendation": "",
   "logIn": "",
   "signUp": "",
   "sponsorsPartnersText": "",
   "sponsorsPartnersTitle": "",
   "start": "",
+  "startLearning": "",
+  "selectCourse": "",
   "whatCodeText": "",
   "whatCodeTitle": "",
   "withSocialMedias": "",
