--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -1,6 +1,7 @@
 {
   "aboutCommand": "Тайпа тууралуу",
   "aboutUs": "Биз тууралуу",
+  "aboutCourse": "Курс тууралуу",
   "aboutPromoText": "Миссиябыз",
   "aboutPromoTitle": "Кыргыз тилдүү программисттердин санын жана билимин арттырууга сапаттуу окуу материалдарын тартуулап салым кошуу",
   "aboutPlatformText1": "<text1>Өзүм айти багытына кызыгып жүрүп, жогорку билимим англис тил мугалими болгонуна карабастан, 29 жашымда codecademy.com сайтынан Python тилин үйрөндүм. Окуганыма 2 жыл болгондо, 2014-жылы айлык маянасы жакшы болгон MegaCom компаниясындагы жумушуман кетип, программист кесибиндеги алгачкы кадамдарымды шилтедим.</text1><text2>Ал ортодо codecademy.com сайтындагы курстарды кыргызчалатуу долбоорун Чоробек Сааданбеков мырза менен 2013–2014 жж. ишке ашырдык. Бирок codecademy.com өзү стартап болгондуктан, өнүгүү багытын өзү чечкенге укуктуу да. Кыргызстандан колдонуучулар өтө аз деген шылтоо менен кыргыз тилин, кийин башка тилдерди дагы алып салып, бир гана англис тилинде окута башташкан.</text2>",
@@ -12,6 +13,7 @@
   "cookiePolicy": "Куки саясаты",
   "courses": "Курстар",
   "coursesDescription": "Курстар 100% кыргызча жазылган",
+  "continueCourse": "Курсту улантуу",
   "easy": "Оңой",
   "enter": "Кирүү",
   "feedbacksAuthor1": "Уланбек",
@@ -36,6 +38,7 @@
   "mainPage": "Башкы бет",
   "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
   "menu": "Меню",
+  "myCourses": "Менин курстарым",
   "lesson": "сабак",
   "next": "Кийинки",
   "noAccountSignUp": "Аккаунтуңуз жокпу? <textPrimary>Жазылыңыз</textPrimary>",
@@ -46,11 +49,14 @@
   "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
   "runCode": "Код жүргүзүү",
   "logIn": "Кирүү",
+  "recommendation": "Сизге сунуш",
   "signUp": "Аккаунт түзүү",
   "sponsorPartnersText": "Бул маалыматтык баракча жарым-жартылай АКШ өкмөтү каржылаган Бүтүрүүчүлѳрдүн чакан гранттар программасынын каражатына даярдалган. Аталган Чакан гранттар программасы Кыргыз Республикасындагы АКШ Элчилиги тарабынан каржыланып, Американын эл аралык билим берүү кеңештери (АКСЕЛС) аркылуу ишке ашырылат. Бул жерде келтирилген сунуштар, корутундулар жана пикирлер авторлордун оюн гана билдирет жана Кыргыз Республикасы АКШ Элчилигинин же Американын эл аралык билим берүү кеңештеринин көз карашына дал келбеши мүмкүн.",
   "sponsorsPartnersTitle": "Демөөрчүлөр жана өнөктөштөр",
   "start": "Баштадык!",
+  "startLearning": "Окуп баштоо",
   "soon": "Жакында",
+  "selectCourse": "Курс тандоо",
   "whatCodeText": "Kodjaz бул дүйнө жүзүндө популярдуу болгон тилдерди жана технологияларда браузерден чыкпастан үйрөнүү мүмкүнчүлүгүн тартуулаган билим берүү платформасы.",
   "whatCodeTitle": "<kodjaz>Kodjaz</kodjaz> деген эмне?",
   "withSocialMedias": "Соцтармактар аркулуу киирүү:",
