--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,6 +1,7 @@
 {
   "aboutCommand": "Команда",
   "aboutUs": "О нас",
+  "aboutCourse": "О курсе",
   "aboutPromoText": "Наша миссия",
   "aboutPromoTitle": "Кыргызскоязычные программисты готовы внести вклад в развитие знаний, увеличив количество и качество учебных материалов",
   "aboutPlatformText1": "<text1>Я сам интересовался IТ и, несмотря на свое высшее образование преподавателя английского языка, в 29 лет выучил Python на codecademy.com. Когда я проучился 2 года, в 2014 году я уволился с высокооплачиваемой работы в MegaCom и сделал первые шаги программиста.</text1><text2>Параллельно работал над проектом кыргызизации курсов на сайте codecademy.com, который мы реализовали с г-ном Чоробеком Сааданбековым в 2013-2014 гг. Однако, поскольку codecademy.com — стартап, он вправе сам определять направление развития. Под предлогом того, что пользователей из Кыргызстана на кыргызском языке слишком мало они убрали его, а потом и другие языки убрали и начали преподавать только на английском языке.</text2>",
@@ -13,6 +14,7 @@
   "courses": "Курсы",
   "coursesDescription": "Курсы написаны 100% на кыргызском языке",
   "enter": "Вход",
+  "continueCourse": "Продолжить курс",
   "feedbacksAuthor1": "Уланбек",
   "feedbacksRegion1": "Баткен область, село Лейлек",
   "feedbacksText1": "Используя платформу Kodjaz, я изучил основы программирования на языке Python. Теперь я пишу собственные проекты, могу реализовать небольшие реальные проекты. Я могу сказать, Дай Бог, что с помощью Kodjaz я могу обучать своих учеников, увеличивая количество программистов в Баткенской области.",
@@ -37,16 +39,20 @@
   "menu": "Меню",
   "next": "Следующий",
   "noAccountSignUp": "Нет аккаунта? <textPrimary>Зарегистрируйтесь</textPrimary>",
+  "myCourses": "Мои курсы",
   "onlyKyrgyzLanguage": "100% на кыргызском языке 🇰🇬",
   "password": "Пароль",
   "privacyPolicy": "Политика конфиденциальности",
   "resources": "Ресурсы",
   "runCode": "Запустить код",
   "logIn": "Вход",
+  "recommendation": "Рекомендуем",
   "signUp": "Зарегистрироваться",
   "sponsorsPartnersText": "Этот информационный бюллетень был подготовлен частично при финансовой поддержке Программы малых грантов для выпускников правительства США. Программа малых грантов финансируется посольством США в Кыргызской Республике и реализуется через Американский совет по международному образованию (ACCELS). Рекомендации, выводы и мнения, представленные здесь, представляют собой только мнение авторов и могут не отражать точку зрения Посольства США в Кыргызской Республике или Американских советов по международному образованию.",
   "sponsorsPartnersTitle": "Спонсоры и партнеры",
   "start": "Стартуем!",
+  "startLearning": "Начать обучение",
+  "selectCourse": "Выбрать курс",
   "whatCodeText": "Kodjaz — это образовательная платформа, которая предлагает возможность изучать самые популярные в мире языки и технологии, не выходя из браузера.",
   "whatCodeTitle": "Что такое <kodjaz>Kodjaz</kodjaz>?",
   "withSocialMedias": "Войти через социальные сети:",
