--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -67,5 +67,5 @@
   "Not found.": "табылган жок.",
   "ok": "Эмейлиңиз текшерилди. Эми кирсеңиз болот :)",
   "emailConfirmationText": "Эмейл ырастоо: {{status}}",
-  "No active account found with the given credentials": "Мындай аккаунт табылган жок. Балким сырзсөзүңүз туура эмес жазылып калгандыр?"
+  "Error: No active account found with the given credentials": "Мындай аккаунт табылган жок. Балким сырзсөзүңүз туура эмес жазылып калгандыр?"
 }
