--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -63,5 +63,6 @@
   "Not found.": "не найдено.",
   "ok": "Ваш email верифицирован. Теперь вы можете залогиниться :)",
   "emailConfirmationText": "Верификация email: {{status}}",
-  "Error: No active account found with the given credentials": "Аккаунт не найдет. Возможно вы ввели неверный пароль."
+  "Error: No active account found with the given credentials": "Аккаунт не найдет. Возможно вы ввели неверный пароль.",
+  "courseInfo": "Информация"
 }
