--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -64,5 +64,8 @@
   "ok": "Ваш email верифицирован. Теперь вы можете залогиниться :)",
   "emailConfirmationText": "Верификация email: {{status}}",
   "Error: No active account found with the given credentials": "Аккаунт не найдет. Возможно вы ввели неверный пароль.",
-  "courseInfo": "Информация"
+  "courseInfo": "Информация",
+  "unitsCount": "Глав: {{numUnits}}",
+  "lessonsCount": "Уроков: {{numLessons}}",
+  "beginner": "Начальный"
 }
