Courses for logged in user (#49)
* Rename admin to classroom

* Move pages out of website

* Rename admin to classroom

* Move my courses to classroom root

* If authenticated redirect to classroom

* Remove redux from ConfirmEmailPopup

* Remove redux stuff from SignUp

* Get red of redux in MainPromo

* Remove SignUpUser from Layout

* SignUpUser: go to main page on close

* Get rid of redux stuff in Login

* Properly pass through error message

* Get rid of redux from Header

* Move to types

* Move Provider to classroom

* Allow to pass empty token

* Don't use Layout inside ClassroomLayout

* Extend redux stuff

* Load data

* Implement signup

* In catch, throw, not return

* Add comments

* Add type

* Export icons

* Render course details

* Fix names

* Delete redundant page

* Protect classroom pages

* Remove AccessDenied

* Rename IDEPage to ExercisePage

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -63,5 +63,9 @@
   "Not found.": "не найдено.",
   "ok": "Ваш email верифицирован. Теперь вы можете залогиниться :)",
   "emailConfirmationText": "Верификация email: {{status}}",
-  "No active account found with the given credentials": "Аккаунт не найдет. Возможно вы ввели неверный пароль."
+  "Error: No active account found with the given credentials": "Аккаунт не найдет. Возможно вы ввели неверный пароль.",
+  "courseInfo": "Информация",
+  "unitsCount": "Глав: {{numUnits}}",
+  "lessonsCount": "Уроков: {{numLessons}}",
+  "beginner": "Начальный"
 }
