--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -62,5 +62,9 @@
   "Not found.": "Not found.",
   "ok": "Your email is verified. Now you can log in :)",
   "emailConfirmationText": "Email verification: {{status}}",
-  "No active account found with the given credentials": "No active account found with the given credentials. Maybe there's a typo in your password?"
+  "Error: No active account found with the given credentials": "No active account found with the given credentials. Maybe there's a typo in your password?",
+  "courseInfo": "Details",
+  "unitsCount": "{{numUnits}} units",
+  "lessonsCount": "{{numLessons}} lessons",
+  "beginner": "Beginner"
 }
