Fixed mobile menu items

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -38,6 +38,7 @@
   "menu": "",
   "next": "",
   "myCourses": "",
+  "myRoom": "My room",
   "noAccountSignUp": "",
   "onlyKyrgyzLanguage": "",
   "password": "",
@@ -47,6 +48,7 @@
   "recommendation": "",
   "logIn": "",
   "signUp": "",
+  "signUpMenu": "",
   "sponsorsPartnersText": "",
   "sponsorsPartnersTitle": "",
   "start": "",
