--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -71,5 +71,6 @@
   "courseInfo": "Маалымат",
   "unitsCount": "{{numUnits}} бап",
   "lessonsCount": "{{numLessons}} сабак",
-  "beginner": "Оңой"
+  "beginner": "Оңой",
+  "signInWith": "{{name}} менен кирүү"
 }
