Added arrow icons

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -47,6 +47,7 @@
   "runCode": "",
   "recommendation": "",
   "logIn": "",
+  "logOut": "",
   "signUp": "",
   "signUpMenu": "",
   "sponsorsPartnersText": "",
