--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -50,6 +50,7 @@
   "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
   "runCode": "Код жүргүзүү",
   "logIn": "Кирүү",
+  "logOut": "Чыгуу",
   "recommendation": "Сизге сунуш",
   "signUp": "Аккаунт түзүү",
   "signUpMenu": "Катталуу",
