--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -47,6 +47,7 @@
   "resources": "Ресурсы",
   "runCode": "Запустить код",
   "logIn": "Вход",
+  "logOut": "Выйти",
   "recommendation": "Рекомендуем",
   "signUp": "Зарегистрироваться",
   "signUpMenu": "Зарегистрироваться",
