Added accordion and responsive ide

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -24,6 +24,7 @@
   "forgotPassword": "",
   "fromFounderText": "",
   "fromFounder": "",
+  "hints": "Hints",
   "infoMainItemText1": "",
   "infoMainItemText2": "",
   "infoMainItemText3": "",
@@ -32,6 +33,7 @@
   "infoMainItemTitle2": "",
   "infoMainItemTitle3": "",
   "infoMainItemTitle4": "",
+  "instructions": "Instruction",
   "kodjazTitle": "",
   "mainPage": "т",
   "mainPromoTitle": "",
