--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -26,6 +26,7 @@
   "forgotPassword": "Сырсөзүңүздү унуттуңузбу?",
   "fromFounderText": "Kodjaz  сүйүктүү Кыргызстаныбыздын уул-кыздарын код жазуу менен тааныштырып, аларга программалоо дүйнөсүнө алгачкы тепкич болот деп ишенем. ",
   "fromFounder": "Уюштуруучудан",
+  "hints": "Кеңештер",
   "infoMainItemText1": "Бир гана браузери бар интернетке туташкан компьютер керек. Интернет-кафе же китепканадан деле кирип үйрөнө бериңиз!",
   "infoMainItemText2": "Материал интерактивдүү редактор менен берилет. Жаңы алган билимиңизди ошол эле жерден практика менен бекемдей аласыз!",
   "infoMainItemText3": "Курстар видео эмес, текст түрүндө берилет. Андыктан өткөн темалардан маалымат керек болгондо, 'ачкыч сөздөр' боюнча издөө мүмкүнчүлүгү сунушталат.",
@@ -34,6 +35,7 @@
   "infoMainItemTitle2": "Интерактивдүү редактор",
   "infoMainItemTitle3": "Оңой издөө",
   "infoMainItemTitle4": "Акысыз курстар",
+  "instructions": "Тапшырма",
   "kodjazTitle": "Kodjaz - программалоо негиздер боюнча акысыз курстар",
   "mainPage": "Башкы бет",
   "mainPromoTitle": "Программалоо негиздерин браузериңизден чыкпай үйрөнүңүз!",
