--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -25,6 +25,7 @@
   "forgotPassword": "Забыли пароль?",
   "fromFounderText": "Я верю, что Kodjaz познакомит сыновей и дочерей нашего любимого Кыргызстана с написанием кода и даст им первый шаг в мир программирования.",
   "fromFounder": "От основателя",
+  "hints": "Подсказки",
   "infoMainItemText1": "Все, что вам нужно, это подключенный к Интернету компьютер с браузером. Продолжайте учиться даже в интернет-кафе или библиотеке!",
   "infoMainItemText2": "Материал снабжен интерактивным редактором. Практикуясь там, вы можете укрепить полученные новые знания.",
   "infoMainItemText3": "Курсы предоставляются в текстовом формате, а не в видео. Поэтому, когда вам нужна информация из предыдущих тем, предлагается возможность поиска по «ключевым словам».",
@@ -33,6 +34,7 @@
   "infoMainItemTitle2": "Интерактивный редактор",
   "infoMainItemTitle3": "Удобный поиск",
   "infoMainItemTitle4": "Бесплатные курсы",
+  "instructions": "Задание",
   "kodjazTitle": "Kodjaz - бесплатные курсы по основам программирования",
   "mainPage": "Главная",
   "mainPromoTitle": "Учиться основам программирования, не выходя из дома!",
