--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -40,6 +40,7 @@
   "menu": "",
   "next": "",
   "myCourses": "",
+  "myRoom": "My room",
   "noAccountSignUp": "",
   "onlyKyrgyzLanguage": "",
   "password": "",
@@ -48,7 +49,9 @@
   "runCode": "",
   "recommendation": "",
   "logIn": "",
+  "logOut": "",
   "signUp": "",
+  "signUpMenu": "",
   "sponsorsPartnersText": "",
   "sponsorsPartnersTitle": "",
   "start": "",
