--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -42,14 +42,17 @@
   "next": "Следующий",
   "noAccountSignUp": "Нет аккаунта? <textPrimary>Зарегистрируйтесь</textPrimary>",
   "myCourses": "Мои курсы",
+  "myRoom": "Кабинет",
   "onlyKyrgyzLanguage": "100% на кыргызском языке 🇰🇬",
   "password": "Пароль",
   "privacyPolicy": "Политика конфиденциальности",
   "resources": "Ресурсы",
   "runCode": "Запустить код",
   "logIn": "Вход",
+  "logOut": "Выйти",
   "recommendation": "Рекомендуем",
   "signUp": "Зарегистрироваться",
+  "signUpMenu": "Зарегистрироваться",
   "sponsorsPartnersText": "Этот информационный бюллетень был подготовлен частично при финансовой поддержке Программы малых грантов для выпускников правительства США. Программа малых грантов финансируется посольством США в Кыргызской Республике и реализуется через Американский совет по международному образованию (ACCELS). Рекомендации, выводы и мнения, представленные здесь, представляют собой только мнение авторов и могут не отражать точку зрения Посольства США в Кыргызской Республике или Американских советов по международному образованию.",
   "sponsorsPartnersTitle": "Спонсоры и партнеры",
   "start": "Стартуем!",
