Added course details page

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -42,8 +42,10 @@
   "myCourses": "",
   "myRoom": "My room",
   "noAccountSignUp": "",
+  "accountExistsLogIn": "",
   "onlyKyrgyzLanguage": "",
   "password": "",
+  "repeatPassword": "",
   "privacyPolicy": "Privacy policy",
   "resources": "",
   "runCode": "",
@@ -68,7 +70,7 @@
   "ok": "Your email is verified. Now you can log in :)",
   "emailConfirmationText": "Email verification: {{status}}",
   "Error: No active account found with the given credentials": "No active account found with the given credentials. Maybe there's a typo in your password?",
-  "courseInfo": "Details",
+  "courseInfo": "Course details",
   "unitsCount": "{{numUnits}} units",
   "lessonsCount": "{{numLessons}} lessons",
   "beginner": "Beginner",
