--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -45,8 +45,10 @@
   "lesson": "сабак",
   "next": "Кийинки",
   "noAccountSignUp": "Аккаунтуңуз жокпу? <textPrimary>Жазылыңыз</textPrimary>",
+  "accountExistsLogIn": "Аккаунтуңуз болсо, <textPrimary>кириңиз</textPrimary>",
   "onlyKyrgyzLanguage": "100% кыргыз тилинде 🇰🇬",
   "password": "Сырсөз",
+  "repeatPassword": "Сырсөзүңүздү кайталаңыз",
   "privacyPolicy": "Купуялык саясат",
   "resources": "Ресурстар",
   "resoursesDescription": "Бул жерде жакын арада пайдалуу ресурстарга шилтемелер болот",
@@ -64,7 +66,7 @@
   "selectCourse": "Курс тандоо",
   "whatCodeText": "Kodjaz бул дүйнө жүзүндө популярдуу болгон тилдерди жана технологияларда браузерден чыкпастан үйрөнүү мүмкүнчүлүгүн тартуулаган билим берүү платформасы.",
   "whatCodeTitle": "<kodjaz>Kodjaz</kodjaz> деген эмне?",
-  "withSocialMedias": "Соцтармактар аркулуу киирүү:",
+  "withSocialMedias": "Соцтармактар аркылуу кирүү:",
   "whySimple": "Эмне үчүн ыңгайлуу?",
   "confirmEmail": "Почтаңызды ырастаңыз",
   "confirmEmailPopupText": "{{email}} почтаңызды текшериңиз. Сизге эмейл менен ырастоо шилтемеси келет. Почта сиздики экенин билдириш үчүн ошол шилтеме аркылуу өтүңүз.",
@@ -73,7 +75,7 @@
   "ok": "Эмейлиңиз текшерилди. Эми кирсеңиз болот :)",
   "emailConfirmationText": "Эмейл ырастоо: {{status}}",
   "Error: No active account found with the given credentials": "Мындай аккаунт табылган жок. Балким сырзсөзүңүз туура эмес жазылып калгандыр?",
-  "courseInfo": "Маалымат",
+  "courseInfo": "Курс тууралуу маалымат",
   "unitsCount": "{{numUnits}} бап",
   "lessonsCount": "{{numLessons}} сабак",
   "beginner": "Оңой",
