--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -41,10 +41,12 @@
   "menu": "Меню",
   "next": "Следующий",
   "noAccountSignUp": "Нет аккаунта? <textPrimary>Зарегистрируйтесь</textPrimary>",
+  "accountExistsLogIn": "Аккаунт уже есть? <textPrimary>Войти</textPrimary>",
   "myCourses": "Мои курсы",
   "myRoom": "Кабинет",
   "onlyKyrgyzLanguage": "100% на кыргызском языке 🇰🇬",
   "password": "Пароль",
+  "repeatPassword": "Повторить пароль",
   "privacyPolicy": "Политика конфиденциальности",
   "resources": "Ресурсы",
   "runCode": "Запустить код",
@@ -69,7 +71,7 @@
   "ok": "Ваш email верифицирован. Теперь вы можете залогиниться :)",
   "emailConfirmationText": "Верификация email: {{status}}",
   "Error: No active account found with the given credentials": "Аккаунт не найдет. Возможно вы ввели неверный пароль.",
-  "courseInfo": "Информация",
+  "courseInfo": "Информация о курсе",
   "unitsCount": "Глав: {{numUnits}}",
   "lessonsCount": "Уроков: {{numLessons}}",
   "beginner": "Начальный",
