--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -75,5 +75,7 @@
   "lessonsCount": "{{numLessons}} lessons",
   "beginner": "Beginner",
   "signInWith": "Sign in with {{name}}",
-  "youFinishedThisExercise": "You did great! Go to the next one!"
+  "youFinishedThisExercise": "You did great! Go to the next one!",
+  "Description": "Description",
+  "Discussion": "Discussion"
 }
