--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -80,5 +80,7 @@
   "lessonsCount": "{{numLessons}} сабак",
   "beginner": "Оңой",
   "signInWith": "{{name}} менен кирүү",
-  "youFinishedThisExercise": "Жарайсыз! Эми кийинкиге өтүңүз!"
+  "youFinishedThisExercise": "Жарайсыз! Эми кийинкиге өтүңүз!",
+  "Description": "Көнүгүү",
+  "Discussion": "Талкуу"
 }
