Add console logic and small fixes (#67)
* Show console with errors

* Set console texts

* Fix pre wrap

* Fix console data rendering

* Remove junk

* Add exercise title

* Show console if output or error

* Fix submission rendering

* Improve console output

* Add translations

* Add react-markdown

* Render with markdown

* Fix version

--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -79,5 +79,8 @@
   "unitsCount": "{{numUnits}} бап",
   "lessonsCount": "{{numLessons}} сабак",
   "beginner": "Оңой",
-  "signInWith": "{{name}} менен кирүү"
+  "signInWith": "{{name}} менен кирүү",
+  "youFinishedThisExercise": "Жарайсыз! Эми кийинкиге өтүңүз!",
+  "Description": "Көнүгүү",
+  "Discussion": "Талкуу"
 }
