Added popup and responsive for the header in the IDE

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,8 +8,12 @@
   "aboutPlatformText2": "",
   "aboutPlatformTitle": "",
   "agreePrivacy": "",
+  "areYouSure": "Are you sure?",
+  "areYouSureToReset": "Are you sure you want to reset? This will overwrite your files and reset your progress.",
   "back": "",
+  "cancel": "Cancel",
   "commandCareerMurat": "",
+  "confirm": "Confirm",
   "cookiePolicy": "Cookie policy",
   "courses": "",
   "continueCourse": "",
