--- a/public/locales/ky/common.json
+++ b/public/locales/ky/common.json
@@ -8,9 +8,13 @@
   "aboutPlatformText2": "<text1>Бирөөдөн көз каранды болбой, өзүнчө иш алып баралы деп,2015-жылы ушул долбоорду түптөп койгон элем. Кол тийбегендиктен долбоор кароосуз калып, 2019-жылы пандемия учурунда бир ай бою 1 күндө 1 сааттан код жазуу челленжин жарыялап, курс куруучу кабинетин жасадым.</text1><text2>2022-жылы өзүм 4 жыл иштеген B12 компаниясында кыскартуулар болуп, жумушсуз калгандыктан, долбоорду кайрадан эрмектеп баштадым. Кесипкөй адамдарды тартып, долбоорду codecademy.com'дон кем эмес деңгээлге чыгарып, элге тартуулайын деген максат менен USG Alumni Small Grants конкурсуна катышып, жеңүүчүлөрдүн катарына кирдим.</text2>",
   "aboutPlatformTitle": "Платформанын келип чыгышы",
   "agreePrivacy": "Катталуу менен мен Kodjaz'дын <textLink>Кызмат көрсөтүү саясаты</textLink> жана <textLink>Купуялык саясаты</textLink> менен макулмун деп белгилейм.",
+  "areYouSure": "Макулсузбу?",
+  "areYouSureToReset": "Чын эле баштапкы абалга келтиргиңиз келеби? Бул файлдарыңыздын үстүнөн жазып, прогрессиңизди баштапкы абалга келтирет.",
   "back": "Артка",
+  "cancel": "Жокко чыгаруу",
   "commandCareerMurat": "Долбоордун түптөөчүсү",
   "cookiePolicy": "Куки саясаты",
+  "confirm": "Ырастоо",
   "courses": "Курстар",
   "coursesDescription": "Курстар 100% кыргызча жазылган",
   "continueCourse": "Курсту улантуу",
