--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -8,9 +8,13 @@
   "aboutPlatformText2": "<text1>Чтобы не зависеть ни от кого, я начал работу над этим проектом в 2015 году. В 2019 году проект был заброшен из-за отсутствия внимания. Во время пандемии я объявил челлендж 1 час в день решать задачи по программированию в течение месяца и создал кабинет по созданию курсов.</text1><text2>В 2022 году я проработал в компании B12 4 года. В связи с увольнениями и безработицей я начал уделять время своему проекту. Чтобы привлечь профессионалов и вывести проект на уровень не ниже codecademy.com, я принял участие в конкурсе малых грантов выпускников USG с целью представить его людям и стал одним из победителей.</text2>",
   "aboutPlatformTitle": "История создания проекта",
   "agreePrivacy": "Регистрируясь, я соглашаюсь с <textLink>Условиями обслуживания</textLink> и <textLink>Политикой конфиденциальности</textLink> Kodjaz.",
+  "areYouSure": "Согласны?",
+  "areYouSureToReset": "Вы уверены, что хотите выполнить сброс? Это перезапишет ваши файлы и сбросит ваш прогресс.",
   "back": "Назад",
+  "cancel": "Отмена",
   "commandCareerMurat": "Основатель проекта",
   "cookiePolicy": "Политика в отношении файлов cookie",
+  "confirm": "Подтвердить",
   "courses": "Курсы",
   "coursesDescription": "Курсы написаны 100% на кыргызском языке",
   "enter": "Вход",
